fix: Kds 720 filter multi select padding issues (#2918)
* fix(filter-multi-select): vertically center-align multi-select options

* fix(filter-multi-select): set white background color on badge when on hover

* docs(filter-multi-select stories): add story for no scrollbar

* fix(list-box): remove margin separating scrollbar when scrollbar is not present

* Don't add focus state css when button is disabled

* fix(filter-multi-select): replace border with focus-ring for selection control buttons

* Lint fix

* fix(filter-multi-select): align checkbox and badge to top

* Revert "fix(filter-multi-select): align checkbox and badge to top"

This reverts commit 064bfec6b3025da29febd45207cf14ccbd7cbd8d.

* fix(filter-multi-select): align checkbox and badge to top, but keep inline with first row of text

* fix(filter-multi-select): align checkbox and badge in SelectOption

* fix(filter-multi-select): use gray, dashed border for disabled buttons on focus

* fix(filter-multi-select): use correct padding values for control buttons

--- a/packages/select/src/FilterMultiSelect/components/ListBox/ListBox.scss
+++ b/packages/select/src/FilterMultiSelect/components/ListBox/ListBox.scss
@@ -8,3 +8,7 @@
   max-height: 210px;
   overflow-y: auto;
 }
+
+.overflown {
+  padding-right: $spacing-sm;
+}
